@@ -8,7 +8,7 @@
   "crons": [
     {
       "path": "/api/prices/oa-movement-cron",
-      "schedule": "0 1 * * *"
+      "schedule": "*/5 * * * *"
     }
   ]
 } 
